# cade-programs

./: README.md
4-in-line/programs/four-in-line/: Cargo.toml
4-in-line/programs/four-in-line/src/: lib.rs
4-in-line/tests/: four-in-line.ts
avatar-program/: Anchor.toml
avatar-program/programs/avatar-program/: Cargo.toml
avatar-program/programs/avatar-program/src/: error.rs  lib.rs
avatar-program/programs/avatar-program/src/instructions/: create_avatar.rs  (+2 more)
avatar-program/tests/: avatar-program.ts
coin-flip/: Anchor.toml  README.md
coin-flip/programs/coin-flip/src/: lib.rs
coin-flip/tests/: coin-flip.ts
ddt/: .pnp.cjs  Anchor.toml  package-lock.json
ddt/programs/ddt/: Cargo.toml
ddt/programs/ddt/src/: lib.rs
ddt/tests/: ddt.ts
dice/: .pnp.cjs  Anchor.toml  package.json  wallet.json
dice/programs/dice/: Cargo.toml
dice/programs/soldice-anchor/src/: lib.rs
dice/src/: lib.rs
dice/tests/: dice.ts  idl.json
dtt/: Anchor.toml  package-lock.json  wallet.json
dtt/programs/ddt/: Cargo.toml
dtt/programs/ddt/src/: lib.rs
dtt/tests/: 0-createMap.ts  1-createGame.ts  2-deployUnits copy.ts  3-resolveGame.ts  dtt.ts
leaderboard-program/: Anchor.toml
leaderboard-program/programs/leaderboard-program/: Cargo.toml
leaderboard-program/programs/leaderboard-program/src/: error.rs  lib.rs  util.rs
leaderboard-program/tests/: leaderboard-program.ts
ticket-program/: Anchor.toml  package.json
ticket-program/programs/ticket-program/: Cargo.toml
ticket-program/programs/ticket-program/src/: lib.rs
ticket-program/tests/: ticket-program.ts
(+10 files in other folders)
